--- a/Contact Me.html
+++ b/Contact Me.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Details</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+      img {
+        height: 300px;
+      }
+    </style>
 </head>
 <body>
     <img src="https://kimon.hosting.nyu.edu/physical-electrical-digital/files/fullsize/9f346cf4776c779d2c3ddfafc21a27e5.jpg" alt="Pigeon mail image">
