--- a/Hobbies.html
+++ b/Hobbies.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h3>My Hobbies</h3>
     <ol>
         <li><a href="https://www.goodreads.com/user/show/4702465-ally">Reading</a></li>
-        <li>Journaling</li>
+        <li>Journaling/Writing</li>
         <li>Baking</li>
         <li>Learning languages</li>
         <li><a href="https://www.youtube.com/watch?v=6IQqFidBXHk">Listening to jazz music</a></li>
