--- a/Inputs.html
+++ b/Inputs.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Input Types</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h2>My Inputs Practice Page</h2>
