Added internal CSS & link to external CSS

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <title>♡ Ally's Personal Site ♡</title>
+    <link rel="stylesheet" href="styles.css">
+  
+  <style>
+      h1 {
+        text-shadow: 2px 3px lightpink;
+        letter-spacing: 4px;
+      }
+    </style>
   </head>
 
   <body>
@@ -22,7 +30,7 @@
         <li>Flowers</li>
         <li>Love</li>
         <li>Family</li>
-        <li>Friendship</li>
+        <li>Friendships</li>
     </ul>
 
     <img src="https://64.media.tumblr.com/b56ce7094ffb023643c8def5bbdf393b/34d6f0d38cc6f7df-16/s75x75_c1/7bdb6e9cdc74a8cff858bcf24fa0fef3069e0315.gifv" alt="moon pixel">
@@ -71,7 +79,7 @@
         <td>
           <table>
             <tr>
-              <td>Spaced-out dreams</td>
+              <td>Lucid dreams</td>
               <td>⭐⭐⭐</td>
             </tr>
             <tr>
