--- a/Contact Me.html
+++ b/Contact Me.html
@@ -20,7 +20,7 @@
             <li>Dreams</li>
         </ul>
     <hr>
-    <form action="mailto:fischerallyson@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:beanbera@gmail.com" method="post" enctype="text/plain">
         <label>Your Name:</label>
         <input type="text" name="YourName"><br>
         <label>Your Email:</label>
